# viviphi

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  test_semantic_fix.py
.github/workflows/: coveralls.yml  lint.yml  publish.yml  tag_validation.yml  tests.yml
docs/: Blueprint.md  Design document - version 1.md  Sample mermaid graphs.md
examples/: LOGO_COLLECTION.md  animate_samples.py
resources/mermaid_graphs/: 01_kitchen_sink_flowchart.mmd  02_nested_subgraphs_direction.mmd  03_styling_and_classes.mmd  04_special_characters_unicode.mmd  05_sequence_diagram.mmd  06_class_diagram.mmd  07_state_diagram.mmd  08_entity_relationship_diagram.mmd  10_stress_test.mmd  11_broken_syntax.mmd  11_interaction_click_events.mmd
scripts/: logo.py  logo_animation.py
tests/: test_all_sample_graphs.py  test_animator.py  test_browser_validation.py  test_integration.py  test_svg_cleaner.py  test_themes.py
viviphi/: __init__.py  animator.py  enums.py  graph.py  mermaid.py  semantic_injector.py  themes.py
