[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viviphi"
version = "0.1.0"
description = "Turn static graphs into beautiful animations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "litellm>=1.80.7",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "svgpathtools>=1.7.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[tool.setuptools.packages.find]
include = ["viviphi*"]
exclude = ["tests*", "temp*", "docs*", "examples*"]

[tool.setuptools.package-data]
"viviphi" = ["**/*.j2", "**/*.yaml"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/*"]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".pytest_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "tests",
]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.run]
source = ["viviphi"]
branch = true
omit = [
    "tests/*",
    ".venv/*",
    "**/__init__.py",
]
command_line = "pytest"

[tool.coverage.report]
#fail_under = 80
precision = 2
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "if TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError"
]
